--- a/Project-II-Calculator/calculator/package.json
+++ b/Project-II-Calculator/calculator/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "mathjs": "^5.10.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "react-textfit": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
